--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
   <meta name="author" content="SitePoint">
 
   <link rel="stylesheet" href="css/styles.css?v=1.0">
+  <head>
+    <title>Title of the document</title>
+  </head>
 
+  <body>
+    The content of the document......
+  </body>
   <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
   <![endif]-->
