--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   </head>
 
   <body>
+    style="background-color:powderblue;"
     The content of the document......
   </body>
   <!--[if lt IE 9]>
