--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
   <head>
     <title>Title of the document</title>
   </head>
-
+  <body style="background-color:powderblue;"> </body>
   <body>
-    style="background-color:powderblue;"
     The content of the document......
   </body>
   <!--[if lt IE 9]>
