--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <head>
     <title>Title of the document</title>
   </head>
-  <body style="background-color:powderblue;"> </body>
+
   <body>
     The content of the document......
   </body>
@@ -23,5 +23,6 @@
 
 <body>
   <script src="js/scripts.js"></script>
+  style="background-color:powderblue;
 </body>
 </html>
