--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
 
 <body>
   <script src="js/scripts.js"></script>
-  style="background-color:powderblue;
+  <body>style="background-color:powderblue;</body>
 </body>
 </html>
